--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ header .header_content {
   .home {
     height: auto;
     padding: 132px 10px;
-    background-image: url("../img/Banner-small.png");
+    background-image: url("../img/Banner2.png");
     background-position: center;
     background-size: cover;
   }
